[package]
name = "pingxelflut"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
pingxelflut-common = { path = "../pingxelflut-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11"
memmap2 = "0.9"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }

[[bin]]
name = "pingxelflut"
path = "src/main.rs"
